SERVER-19046 Make myTerminate call quickExit when re-entered by a single thread.